build emergency service

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="right-cornner">
                 <div class="fav">
-                    <p>0</p>
+                    <p id="fav-count">0</p>
                     <img src="/assets/heart.png" alt="">
                 </div>
                 <div class="token">
@@ -33,7 +33,7 @@
                     <img src="/assets/coin.png" alt="">
                 </div>
                 <div class="copy-count">
-                    <p>0 <span>Copy</span></p>
+                    <p><span id="num-copy">0</span> <span>Copy</span></p>
                 </div>
             </div>
         </nav>
@@ -55,7 +55,7 @@
 
         <div class="data-container">
             <div class="hotline-container">
-                <div class="hotline-card">
+                <!-- <div class="hotline-card">
                     <div class="card-icon">
                         <div class="emergency-icon">
                             <img src="/assets/emergency.png" alt="">
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                     <div class="hotline-title">
-                        <h3>National Emergency Number</h3>
+                        <h3 class = "title">National Emergency Number</h3>
                         <p>National Emergency</p>
                     </div>
                     <div class="hotline-number">
@@ -88,7 +88,7 @@
                             <p>Call</p>
                         </button>
                     </div>
-                </div>
+                </div> -->
             </div>
 
             <div class="history-container">
@@ -101,7 +101,7 @@
                 </div>
 
                 <div class="history-data">
-                    <div class="each-call">
+                    <!-- <div class="each-call">
                         <div>
                             <p>Fire Service Number</p>
                             <p>999</p>
@@ -109,7 +109,7 @@
                         <div>
                             <p>11:36:58 AM</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
